[refactor] TitlesService return domain objects and Controllers return DTO